feat: update hybridsql docker image & hybridse workflow (#875)
* update hybridsql docker

* build: fix deps

* ci: update hybridse workflow

WIP #676

- rm hybridse install and release rrtifact
- rm hybridse release job

* fix hybridsql dockerfile

* ci: optimize sql_mode_test

job number 3 -> 1

* ci: fix sql_mode_sdk_test

* ci: merge sql_mode_sdk_test into build_and_cpp_ut

reduce self-hosted job number 2 -> 1

* ci: skip make install on pull request

* build: update thirdparty to v0.4.2

* ci: fix cpp ut

* ci: add cache action to java job

idealy it can sppedup maven project's download speed

* fix MAVEN_OPTS

* refactor(docker): move hybridse/docker to docker

add zetasql into hybridsql

* fix allinone-deploy

* update hybridsql-docker job

* add check for centos and ubuntu

* build: fix os check

* ci: imcrease NPROC for self hosted to 8

* delete linux distro with /etc/os-release

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,15 +27,22 @@ RUN yum update -y && yum install -y centos-release-scl epel-release && \
     yum clean all && rm lcov-1.15-1.noarch.rpm && \
     curl -SLo apache-maven-3.6.3-bin.tar.gz https://mirrors.ocf.berkeley.edu/apache/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz && \
     tar xzf apache-maven-3.6.3-bin.tar.gz -C /usr/local --strip-components=1 && \
-    curl -SLo thirdsrc.tar.gz https://github.com/jingchen2222/hybridsql-asserts/releases/download/v0.3.1/thirdsrc-2021-05-17.tar.gz && \
-    mkdir -p /depends/thirdsrc && \
-    tar xzf thirdsrc.tar.gz -C /depends/thirdsrc --strip-components=1 && \
+    curl -SLo thirdparty.tar.gz https://github.com/4paradigm/hybridsql-asserts/releases/download/v0.4.2/thirdparty-2021-12-10-linux-gnu-x86_64-centos.tar.gz && \
+    mkdir -p /deps/usr && \
+    tar xzf thirdparty.tar.gz -C /deps/usr --strip-components=1 && \
+    curl -SLo zetasql.tar.gz https://github.com/4paradigm/zetasql/releases/download/v0.2.5/libzetasql-0.2.5-linux-gnu-x86_64.tar.gz && \
+    tar xzf zetasql.tar.gz -C /deps/usr --strip-components=1 && \
+    curl -SLo zookeeper.tar.gz https://archive.apache.org/dist/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz && \
+    mkdir -p /deps/src && \
+    tar xzf zookeeper.tar.gz -C /deps/src && \
     /setup_cmake.sh "${TARGETARCH}" && \
     rm /setup_cmake.sh && \
     rm ./*.tar.gz
 
-ENV PATH=/opt/rh/rh-git227/root/usr/bin:/opt/rh/rh-python38/root/usr/local/bin:/opt/rh/rh-python38/root/usr/bin:/opt/rh/devtoolset-8/root/usr/bin:/depends/thirdparty/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-ENV LD_LIBRARY_PATH=/depends/thirdparty/lib:/depends/thirdparty/lib64:/opt/rh/httpd24/root/usr/lib64:/opt/rh/rh-python38/root/usr/lib64:/opt/rh/devtoolset-8/root/usr/lib64:/opt/rh/devtoolset-8/root/usr/lib:/opt/rh/devtoolset-8/root/usr/lib64/dyninst
+ENV THIRD_PARTY_DIR=/deps/usr
+ENV THIRD_PARTY_SRC_DIR=/deps/src
+ENV PATH=/opt/rh/rh-git227/root/usr/bin:/opt/rh/rh-python38/root/usr/local/bin:/opt/rh/rh-python38/root/usr/bin:/opt/rh/devtoolset-8/root/usr/bin:/deps/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV LD_LIBRARY_PATH=/deps/usr/lib:/deps/usr/lib64:/opt/rh/httpd24/root/usr/lib64:/opt/rh/rh-python38/root/usr/lib64:/opt/rh/devtoolset-8/root/usr/lib64:/opt/rh/devtoolset-8/root/usr/lib:/opt/rh/devtoolset-8/root/usr/lib64/dyninst
 ENV LANG=en_US.UTF-8
 
 WORKDIR /root
