--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,7 +22,7 @@ jobs:
       SQL_PYSDK_ENABLE: OFF
       SQL_JAVASDK_ENABLE: OFF
       TESTING_ENABLE: ON
-      NPROC: 4
+      NPROC: 8
     steps:
       - uses: actions/checkout@v2
 
@@ -55,6 +55,18 @@ jobs:
         run: |
           make test
 
+      - name: run sql_sdk_test
+        run: |
+          bash steps/ut.sh sql_sdk_test 0
+
+      - name: run sql_cluster_test
+        run: |
+          bash steps/ut.sh sql_cluster_test 0
+
+      - name: run sql_standalone_sdk_test
+        run: |
+          bash steps/ut.sh sql_standalone_sdk_test 0
+
       - name: upload unit test results
         if: always()
         uses: actions/upload-artifact@v2
@@ -64,6 +76,7 @@ jobs:
             reports/*.xml
 
       - name: install
+        if: ${{ github.event_name == 'push' }}
         run: |
           make install
 
@@ -79,42 +92,6 @@ jobs:
           path: openmldb-*.tar.gz
           name: release-artifacts
 
-  sql_mode_sdk_test:
-    runs-on: self-hosted
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    strategy:
-      fail-fast: true
-      matrix:
-        test_target:
-          - sql_standalone_sdk_test
-          - sql_sdk_test
-          - sql_cluster_test
-    env:
-      OPENMLDB_BUILD_TARGET: ${{ matrix.test_target }}
-      TEST_TARGET: ${{ matrix.test_target }}
-      TESTING_ENABLE: ON
-      TEST_LEVEL: 0
-      NPROC: 4
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: configure and build
-        run: |
-          make build
-
-      - name: run test ${{ matrix.test_target }}
-        run: |
-          make test
-
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-${{ env.TEST_TARGET }}-${{ github.sha }}
-          path: |
-            reports/*.xml
-
   java-sdk:
     runs-on: ubuntu-latest
     container:
@@ -122,8 +99,17 @@ jobs:
     env:
       SQL_JAVASDK_ENABLE: ON
       OPENMLDB_BUILD_TARGET: 'sql_javasdk_package openmldb'
+      MAVEN_OPTS: -Duser.home=/github/home
     steps:
       - uses: actions/checkout@v2
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('java/**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: build jsdk and package
         run: |
@@ -186,7 +172,7 @@ jobs:
 
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
 
     # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
     if: >
@@ -207,7 +193,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # if test failed, shouldn't release
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -227,7 +213,7 @@ jobs:
   # only tag deploy, only run on 4paradigm/OpenMLDB's context?
   java-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     # java deploy is triggered with a push to main or a tag push
@@ -238,6 +224,8 @@ jobs:
       success() && github.event_name == 'push'
     env:
       SQL_JAVASDK_ENABLE: ON
+      # do not set user.home on macos
+      MAVEN_OPTS: -Duser.home=/github/home
     steps:
       - uses: actions/checkout@v2
 
@@ -263,8 +251,6 @@ jobs:
           VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
-          # do not set user.home on macos
-          MAVEN_OPTS: -Duser.home=/github/home
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
@@ -272,7 +258,7 @@ jobs:
   java-sdk-deploy-mac:
     runs-on: macos-latest
     # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
@@ -312,7 +298,7 @@ jobs:
 
   python-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
