--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -68,29 +68,17 @@
 			</properties>
 		</profile>
 	</profiles>
-    <repositories>
-        <repository>
-            <id>s01.oss.sonatype.org-snapshot</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 	<dependencies>
 		<dependency>
-			<groupId>com.4paradigm.hybridse</groupId>
+			<groupId>com.4paradigm.openmldb</groupId>
 			<artifactId>hybridse-native</artifactId>
-			<version>${hybridseCommonVersionFromProfile}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.4paradigm.hybridse</groupId>
+			<groupId>com.4paradigm.openmldb</groupId>
 			<artifactId>hybridse-sdk</artifactId>
-			<version>${hybridseCommonVersionFromProfile}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
