--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -3,41 +3,40 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
-	<parent>
-        <artifactId>hybridse-java</artifactId>
-        <groupId>com.4paradigm.hybridse</groupId>
-        <version>0.4.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+    <parent>
+      <artifactId>openmldb-parent</artifactId>
+      <groupId>com.4paradigm.openmldb</groupId>
+      <version>0.4.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>hybridse-sdk</artifactId>
     <packaging>jar</packaging>
     <name>hybridse-sdk</name>
-    <version>${versionFromProfile}</version>
 
-	<profiles>
-		<profile>
-			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-                <versionFromProfile>${project.version.base}${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-		<profile>
-			<id>macos</id>
-			<properties>
-                <versionFromProfile>${project.version.base}-macos${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-		<profile>
-			<id>allinone</id>
-			<properties>
-                <versionFromProfile>${project.version.base}-allinone${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-	</profiles>
+    <profiles>
+      <profile>
+	<id>default</id>
+	<activation>
+	  <activeByDefault>true</activeByDefault>
+	</activation>
+	<properties>
+	  <versionFromProfile>${project.version.base}${project.version.suffix}</versionFromProfile>
+	</properties>
+      </profile>
+      <profile>
+	<id>macos</id>
+	<properties>
+	  <versionFromProfile>${project.version.base}-macos${project.version.suffix}</versionFromProfile>
+	</properties>
+      </profile>
+      <profile>
+	<id>allinone</id>
+	<properties>
+	  <versionFromProfile>${project.version.base}-allinone${project.version.suffix}</versionFromProfile>
+	</properties>
+      </profile>
+    </profiles>
 
     <dependencies>
 		<dependency>
@@ -77,11 +76,11 @@
             <scope>test</scope>
         </dependency>
 
-		<dependency>
-			<groupId>com.4paradigm.hybridse</groupId>
-			<artifactId>hybridse-native</artifactId>
-			<version>${versionFromProfile}</version>
-		</dependency>
+	<dependency>
+	  <groupId>com.4paradigm.openmldb</groupId>
+	  <artifactId>hybridse-native</artifactId>
+	  <version>${project.parent.version}</version>
+	</dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -90,7 +89,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.4paradigm.hybridse</groupId>
+            <groupId>com.4paradigm.openmldb</groupId>
             <artifactId>hybridse-proto</artifactId>
             <version>${project.parent.version}</version>
             <scope>compile</scope>
@@ -98,18 +97,18 @@
     </dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.16.8.0</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals><goal>delombok</goal></goals>
-					</execution>
-				</executions>
-			</plugin>
+	  <plugins>
+	    <plugin>
+	      <groupId>org.projectlombok</groupId>
+	      <artifactId>lombok-maven-plugin</artifactId>
+	      <version>1.16.8.0</version>
+	      <executions>
+		<execution>
+		  <phase>generate-sources</phase>
+		  <goals><goal>delombok</goal></goals>
+		</execution>
+	      </executions>
+	    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
