--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,12 +18,13 @@ on:
 env:
   GIT_SUBMODULE_STRATEGY: recursive
   NPROC: 2 # default Parallel build number for GitHub's Linux runner
+  container: ghcr.io/4paradigm/hybridsql:0.4.1
 
 jobs:
   build_and_cpp_ut:
     runs-on: self-hosted
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
+      image: ${{ env.container }}
     env:
       OS: linux
       SQL_PYSDK_ENABLE: OFF
@@ -32,10 +33,6 @@ jobs:
       NPROC: 8
     steps:
       - uses: actions/checkout@v2
-
-      - name: setup thirdparty
-        run: |
-          make thirdparty
 
       - name: prepare
         run: |
@@ -102,7 +99,7 @@ jobs:
   java-sdk:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
+      image: ${{ env.container }}
     env:
       SQL_JAVASDK_ENABLE: ON
       OPENMLDB_BUILD_TARGET: 'sql_javasdk_package openmldb'
@@ -143,7 +140,7 @@ jobs:
   python-sdk:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
+      image: ${{ env.container }}
     env:
       SQL_PYSDK_ENABLE: ON
       OPENMLDB_BUILD_TARGET: 'sqlalchemy_openmldb openmldb'
@@ -222,7 +219,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
+      image: ${{ env.container }}
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
@@ -253,7 +250,6 @@ jobs:
 
       - name: upload to maven
         run: |
-          make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
           VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
@@ -294,7 +290,6 @@ jobs:
 
       - name: upload to maven
         run: |
-          make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
           VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
