--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -106,6 +106,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
+          gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
+
+      - name: Import GPG key
+        id: import_gpg
+        if: github.event_name == 'push'
+        uses: crazy-max/ghaction-import-gpg@v3
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
@@ -114,7 +130,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: build jsdk and package
+      - name: build jsdk
         run: |
           make build
 
@@ -135,6 +151,88 @@ jobs:
           name: linux-ut-result-java-${{ github.sha }}
           path: |
             java/openmldb-jdbc/target/**/TEST-*.xml
+
+      - name: prepare deply version
+        if: github.event_name == 'push'
+        run: |
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          VERSION=${VERSION#v}
+          ./java/prepare_release.sh "$VERSION"
+
+      - name: deploy
+        if: github.event_name == 'push'
+        run: |
+          mvn deploy -Dmaven.test.skip=true
+
+
+  java-sdk-mac:
+    # mac job for java sdk. steps are almost same with job 'java-sdk'
+    # except mvn deploy won't target all modules, just hybridse-native & openmldb-native
+    runs-on: macos-latest
+    env:
+      SQL_JAVASDK_ENABLE: ON
+      OPENMLDB_BUILD_TARGET: 'cp_native_so openmldb'
+      NPROC: 3
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('java/**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
+          gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
+
+      - name: Import GPG key
+        id: import_gpg
+        if: github.event_name == 'push'
+        uses: crazy-max/ghaction-import-gpg@v3
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+
+      - name: build jsdk
+        run: |
+          make build
+
+      - name: run java modules smoke test
+        run: |
+          sh steps/ut_zookeeper.sh start
+          cd onebox && sh start_onebox.sh && cd - || exit
+          cd java
+          mvn test
+          cd -
+          cd onebox && sh stop_all.sh && cd - || exit
+          sh steps/ut_zookeeper.sh stop
+
+      - name: upload java ut results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: linux-ut-result-java-${{ github.sha }}
+          path: |
+            java/openmldb-jdbc/target/**/TEST-*.xml
+
+      - name: prepare deply version
+        if: github.event_name == 'push'
+        run: |
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          VERSION=${VERSION#v}
+          ./java/prepare_release.sh "$VERSION"
+
+      - name: deploy
+        if: github.event_name == 'push'
+        run: |
+          echo "TODO"
 
   python-sdk:
     runs-on: ubuntu-latest
@@ -212,90 +310,6 @@ jobs:
             openmldb-*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # only tag deploy, only run on 4paradigm/OpenMLDB's context?
-  java-sdk-deploy:
-    runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.1
-    # java deploy is triggered with a push to main or a tag push
-    # a 'vX.Y.Z' tag push will deploy a release version to maven central,
-    # any other push will deploy a SNAPSHOT version.
-    # see more in 'steps/package_openmldb_javasdk.sh'
-    if: >
-      success() && github.event_name == 'push'
-    env:
-      SQL_JAVASDK_ENABLE: ON
-      # do not set user.home on macos
-      MAVEN_OPTS: -Duser.home=/github/home
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '8'
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_TOKEN
-          gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
-
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v3
-        with:
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-
-      - name: upload to maven
-        run: |
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=${VERSION#v}
-          ./steps/package_openmldb_javasdk.sh "$VERSION"
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-
-  java-sdk-deploy-mac:
-    runs-on: macos-latest
-    # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
-    # java deploy is triggered with a push to main or a tag push
-    # a 'vX.Y.Z' tag push will deploy a release version to maven central,
-    # any other push will deploy a SNAPSHOT version.
-    # see more in 'steps/package_openmldb_javasdk.sh'
-    if: >
-      success() && github.event_name == 'push'
-    env:
-      SQL_JAVASDK_ENABLE: ON
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '8'
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_TOKEN
-          gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
-
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v3
-        with:
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-
-      - name: upload to maven
-        run: |
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=${VERSION#v}
-          ./steps/package_openmldb_javasdk.sh "$VERSION"
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
   python-sdk-deploy:
     runs-on: ubuntu-latest
