--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -154,7 +154,7 @@ jobs:
           path: |
             java/openmldb-jdbc/target/**/TEST-*.xml
 
-      - name: prepare deply version
+      - name: prepare deploy version
         if: github.event_name == 'push'
         run: |
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
@@ -170,7 +170,9 @@ jobs:
   java-sdk-mac:
     # mac job for java sdk. steps are almost same with job 'java-sdk'
     # except mvn deploy won't target all modules, just hybridse-native & openmldb-native
+    # the job only run on tag push or manual workflow dispatch due to no test runs
     runs-on: macos-latest
+    if: github.event_name == 'push'
     env:
       SQL_JAVASDK_ENABLE: ON
       OPENMLDB_BUILD_TARGET: 'cp_native_so openmldb'
@@ -206,25 +208,26 @@ jobs:
         run: |
           make build
 
-      - name: run java modules smoke test
-        run: |
-          sh steps/ut_zookeeper.sh start
-          cd onebox && sh start_onebox.sh && cd - || exit
-          cd java
-          mvn test
-          cd -
-          cd onebox && sh stop_all.sh && cd - || exit
-          sh steps/ut_zookeeper.sh stop
+      # Need: ut_zookeeper & start_onebox adopted for macOS
+      # - name: run java modules smoke test
+      #   run: |
+      #     sh steps/ut_zookeeper.sh start
+      #     cd onebox && sh start_onebox.sh && cd - || exit
+      #     cd java
+      #     mvn test
+      #     cd -
+      #     cd onebox && sh stop_all.sh && cd - || exit
+      #     sh steps/ut_zookeeper.sh stop
 
-      - name: upload java ut results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-java-${{ github.sha }}
-          path: |
-            java/openmldb-jdbc/target/**/TEST-*.xml
+      # - name: upload java ut results
+      #   if: always()
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: linux-ut-result-java-${{ github.sha }}
+      #     path: |
+      #       java/openmldb-jdbc/target/**/TEST-*.xml
 
-      - name: prepare deply version
+      - name: prepare deploy version
         if: github.event_name == 'push'
         run: |
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
@@ -247,14 +250,17 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build pysdk and sqlalchemy
-
         run: |
           make build
 
-      - name: test sqlalchemy
+      - name: prepare python deps
         run: |
           python3 -m easy_install nose pip
+          pip install setuptools wheel twine
           yum install -y net-tools
+
+      - name: test sqlalchemy
+        run: |
           bash steps/test_python.sh
 
       - name: upload python ut results
@@ -265,13 +271,14 @@ jobs:
           path: |
             python/test/nosetests.xml
 
-      - name: upload pysdk and whl
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: |
-            build/python/dist/openmldb*.whl
-          name: python-artifacts
+      - name: upload to pypi
+        run: |
+          cp build/python/dist/openmldb*.whl .
+          ls
+          twine upload openmldb-*.whl
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
 
   publish-test-results:
     runs-on: ubuntu-latest
@@ -312,31 +319,3 @@ jobs:
             openmldb-*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  python-sdk-deploy:
-    runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
-    if: >
-      success() && startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Download Release Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: python-artifacts
-      # download only one file, so no dir, just openmldb-*.whl
-      - name: upload to pypi
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          ls
-          twine upload openmldb-*.whl
