--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -13,29 +13,9 @@
     <packaging>jar</packaging>
     <name>hybridse-native</name>
 
-	<profiles>
-		<profile>
-			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-                <versionFromProfile>${project.version.base}${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-		<profile>
-			<id>macos</id>
-			<properties>
-                <versionFromProfile>${project.version.base}-macos${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-		<profile>
-			<id>allinone</id>
-			<properties>
-                <versionFromProfile>${project.version.base}-allinone${project.version.suffix}</versionFromProfile>
-			</properties>
-		</profile>
-	</profiles>
+    <!-- do not delete the version, a macos variant will also release for hybridse-native,
+    	 so it's version is not only inherited from parent -->
+    <version>0.4.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
