--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -15,7 +15,7 @@
 
     <!-- do not delete the version, a macos variant will also release for hybridse-native,
     	 so it's version is not only inherited from parent -->
-    <version>0.4.0-SNAPSHOT</version>
+    <version>${variant.native.version}</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
