--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>com.4paradigm.openmldb</groupId>
 			<artifactId>hybridse-native</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${variant.native.version}</version>
 		</dependency>
 
 		<dependency>
@@ -221,11 +221,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
