--- a/java/openmldb-jdbc/pom.xml
+++ b/java/openmldb-jdbc/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.4paradigm.openmldb</groupId>
             <artifactId>openmldb-native</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>${variant.native.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
