--- a/java/openmldb-native/pom.xml
+++ b/java/openmldb-native/pom.xml
@@ -14,7 +14,7 @@
     <name>openmldb-native</name>
     <!-- do not delete the version, a macos variant will also release for openmldb-native,
     	 so it's version is not only inherited from parent -->
-    <version>0.4.0-SNAPSHOT</version>
+    <version>${variant.native.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
