--- a/java/pom.xml
+++ b/java/pom.xml
@@ -215,11 +215,10 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>3.0.0-M5</version>
                     <configuration>
                       <reuseForks>false</reuseForks>
                       <forkCount>1</forkCount>
-                      <forkMode>always</forkMode>
                       <argLine>@{argLine} -Xmx4G</argLine>
                     </configuration>
                 </plugin>
