--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,7 +30,7 @@ jobs:
     env:
       OS: linux
       SQL_PYSDK_ENABLE: OFF
-      SQL_JAVASDK_ENABLE: OFF
+      SQL_JAVASDK_ENABLE: ON # enable to build and package Java files
       TESTING_ENABLE: ON
       NPROC: 8
     steps:
