Remove executable flags for jar and conf files

--- a/src/sdk/CMakeLists.txt
+++ b/src/sdk/CMakeLists.txt
@@ -193,13 +193,13 @@ if(SQL_JAVASDK_ENABLE)
             PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
     install(FILES ${TASKMANAGER_CONF}
             DESTINATION taskmanager/conf/
-            PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
+            PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
     install(FILES ${TASKMANAGER_LIB}
             DESTINATION taskmanager/lib/
-            PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
+            PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
 
     FILE(GLOB BATCHJOB_JAR "${PROJECT_SOURCE_DIR}/java/openmldb-batchjob/target/openmldb-batchjob*.jar")
     install(FILES ${BATCHJOB_JAR}
             DESTINATION batchjob/
-            PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
+            PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
 endif()
