--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -46,11 +46,13 @@ jobs:
           echo "OPENMLDB_PREFIX=openmldb-$VERSION" >> $GITHUB_ENV
 
       - name: enable java on release
-          if: github.event_name == 'push'
-          run: |
-            echo "SQL_JAVASDK_ENABLE=ON" >> $GITHUB_ENV
+        if: github.event_name == 'push'
+        run: |
+          echo "SQL_JAVASDK_ENABLE=ON" >> $GITHUB_ENV
 
       - name: configure
+        env:
+          SQL_JAVASDK_ENABLE: ${{ env.SQL_JAVASDK_ENABLE }}
         run: |
           make configure CMAKE_INSTALL_PREFIX=${{ env.OPENMLDB_PREFIX }}
 
