--- a/java/openmldb-import/pom.xml
+++ b/java/openmldb-import/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.4paradigm.openmldb</groupId>
             <artifactId>openmldb-common</artifactId>
-            <version>0.3.2-macos</version>
+            <version>0.3.2</version>
         </dependency>
         <dependency>
             <groupId>com.baidu</groupId>
