--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -15,11 +15,11 @@ zookeeper.base_sleep_time=1000
 zookeeper.max_connect_waitTime=30000
 
 # BatchJob Config
-batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.4.0-SNAPSHOT.jar
+batchjob.jar.path=../lib/openmldb-batchjob-0.4.0-SNAPSHOT.jar
 
 # Hadoop Config
 namenode.uri=
-offline.data.prefix = file:///tmp/openmldb_offline/
+offline.data.prefix = file:///tmp/openmldb_offline_storage/
 
 # Spark Config
 spark.master=local
