update basic monitor

--- a/monitoring/monitor.conf
+++ b/monitoring/monitor.conf
@@ -1,13 +1,17 @@
-# port不用改
+# metric export port
 port=8000
-# 数据采样频率, 默认为1秒
-interval=1
-# monitor log目录
-log_dir=./logs
 
-tablet_endpoint=172.27.128.37:9827
-# 要监控tablet的log目录
-tablet_log_dir=./logs
+# pull interval
+interval=15
 
-# 要监控nameserver的log目录
-ns_log_dir=/home/denglong/env/rtidb_test/ns/logs
+# monitor log directory
+log_dir=logs
+
+# url to tablet server
+tablet_endpoint=127.0.0.0:9520
+
+# log directory of tablet server
+# tablet_log_dir=
+
+# log directory of name server
+# ns_log_dir=
