Fix the hdfs path and do not remove prefix

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -1,9 +1,10 @@
 # Server Config
-server.host=127.0.0.1
+server.host=0.0.0.0
 server.port=9902
 server.worker_threads=4
 server.io_threads=4
 prefetch.jobid.num=1
+job.log.path=../log/
 
 # OpenMLDB Config
 zookeeper.cluster=127.0.0.1:2181
