refactor: update openmldb_exporter
simplify exported gauges, use less labels

--- a/monitoring/monitor.conf
+++ b/monitoring/monitor.conf
@@ -1,14 +1,11 @@
 # metric export port
 port=8000
 
-# pull interval
+# pull interval, unit: second
 interval=15
 
-# monitor log directory
-log_dir=logs
-
 # url to tablet server
-tablet_endpoint=127.0.0.0:9520
+tablet_endpoint=127.0.0.1:9520
 
 # log directory of tablet server
 # tablet_log_dir=
