Support default spark parameter in TaskManager config

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -7,7 +7,7 @@ prefetch.jobid.num=1
 job.log.path=../log/
 
 # OpenMLDB Config
-zookeeper.cluster=127.0.0.1:2181
+zookeeper.cluster=0.0.0.0:2181
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 zookeeper.connection_timeout=5000
@@ -26,3 +26,4 @@ offline.data.prefix=file:///tmp/openmldb_offline_storage/
 spark.master=local
 spark.yarn.jars=
 spark.home=
+spark.default.conf=
