ci(#940): improve code coverage
- enable coverage in src directory

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,6 +20,7 @@ env:
   NPROC: 2 # default Parallel build number for GitHub's Linux runner
   EXAMPLES_ENABLE: OFF # turn off hybridse's example code
   HYBRIDSE_TESTING_ENABLE: OFF # turn off hybridse's test code
+  CTEST_PARALLEL_LEVEL: 2 # parallel test level for ctest (make test)
 
 jobs:
   build_and_cpp_ut:
