Update the default path of taskmanager log

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -4,7 +4,7 @@ server.port=9902
 server.worker_threads=4
 server.io_threads=4
 prefetch.jobid.num=1
-job.log.path=../log/
+job.log.path=./log/
 
 # OpenMLDB Config
 zookeeper.cluster=0.0.0.0:2181
